--- a/.github/workflows/on-change.yaml
+++ b/.github/workflows/on-change.yaml
@@ -21,7 +21,9 @@ jobs:
         with:
           version: "2022.1"
           install-go: false
+      - name: "Build binary - Adhoc"
+        run: go build -o .go/builds/adhoc cmd/adhoc/main.go
       - name: "Build binary - Server"
-        run: go build -o .go/builds/server cmd/server.go
+        run: go build -o .go/builds/server cmd/server/main.go
       - name: "Run tests - All"
         run: go test ./...
