Fix errors produced by the Golang Security Checker
- Added gosec in workflow action

- Clean paths provided by a variable
- Fix unhandled errors

--- a/.github/workflows/on-change.yaml
+++ b/.github/workflows/on-change.yaml
@@ -21,6 +21,10 @@ jobs:
         with:
           version: "2022.1"
           install-go: false
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          args: ./...
       - name: "Build syncron binary"
         run: go build -v -o .go/builds/syncron main.go
       - name: "Run tests - All"
