--- a/.github/workflows/on-change.yaml
+++ b/.github/workflows/on-change.yaml
@@ -24,9 +24,7 @@ jobs:
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
-          args:
-            - ./...
-            - -exlude G104
+          args:  ./...
       - name: "Build syncron binary"
         run: go build -v -o .go/builds/syncron main.go
       - name: "Run tests - All"
